# live-sampler

./: .gitignore  Cargo.toml  LICENSE  README  README.md  bundle.sh  bundler.toml  release.sh  run_jack.sh  run_midi.sh  sampler.py  test.py  test_reaper.sh
.github/workflows/: build.yaml
audio-sampler/: Cargo.toml
audio-sampler/src/: lib.rs  sampler.rs  volume.rs
audio_sampler/: Cargo.toml
audio_sampler/src/: calc_sample.rs  clip.rs  clip2.rs  common_types.rs  editor.rs  editor_vizia.rs  intervals.rs  lib.rs  loop_mode.rs  main.rs  phase.rs  player.rs  recorder.rs  sampler.rs  test_sampler.rs  time_unit.rs  time_value.rs  utils.rs  voice.rs
audio_sampler_lib/: .gitignore  Cargo.toml  build.rs
audio_sampler_lib/src/: capi.rs  clip.rs  clip2.rs  common_types.rs  lib.rs  recorder.rs  sampler.rs  test_perf.rs  test_sampler.rs  time_value.rs  utils.rs  voice.rs  volume.rs
lua_plugin/: Cargo.toml
lua_plugin/src/: lib.rs  main.rs
midi-sampler/: Cargo.toml
midi-sampler/src/: count_map.rs  event_sampler.rs  event_sampler2.rs  event_sampler3.rs  event_sampler5.rs  event_sampler6.rs  lib.rs  utils.rs
midi_sampler/: Cargo.toml
midi_sampler/src/: count_map.rs  event_sampler5.rs  event_sampler6.rs  lib.rs  main.rs  utils.rs
pyo3-plugin/: Cargo.toml
pyo3-plugin/src/: common_types.rs  editor_vizia.rs  lib.rs  main.rs
pyo3_plugin/: Cargo.toml
pyo3_plugin/src/: common_types.rs  editor_vizia.rs  event.rs  host.rs  lib.rs  main.rs  params.rs  source_path.rs  source_state.rs  transport.rs  utils.rs
python/: main.py  sampler.py  test.py
src/: audio.rs  editor.rs  lib.rs  main.rs  sampler.rs  volume_env.rs
xtask/: Cargo.toml
xtask/src/: main.rs
