[package]
name = "audio_sampler"
edition = "2021"

[lib]
name = "audio_sampler"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "audio-sampler"
path = "src/main.rs"

[features]
jemalloc = ["tikv-jemallocator"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }

[dependencies.nih_plug]
git = "https://github.com/robbert-vdh/nih-plug"
features = ["standalone", "vst3"]

[dependencies.nih_plug_vizia]
git = "https://github.com/robbert-vdh/nih-plug"

#[dependencies.nih_plug_iced]
#git = "https://github.com/robbert-vdh/nih-plug"

[dev-dependencies.rand]
version = "0.8.5"
features = ["small_rng"]


[dependencies]
log = "0.4.20"

serde = { version = "1.0", features = ["derive"] }

atomic_refcell = "0.1"
atomic_float = "0.1"
crossbeam = "0.8"
#parking_lot = "0.12.1"
crossbeam-queue = "0.3.11"
#triple_buffer = "7.0.0"

smallvec = "1.12.0"
parking_lot = "0.12.1"
triple_buffer = "7.0.0"
num-traits = "0.2.17"

#iced_baseview = "0.0.1"
#iced_graphics = "0.2.0"



