[package]
name = "audio_sampler"
edition = "2021"

[lib]
name = "audio_sampler"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "audio-sampler"
path = "src/main.rs"

[features]
use_jemalloc = ["tikv-jemallocator"]
use_mimalloc = ["mimalloc"]
use_vizia = ["nih_plug_vizia"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }

mimalloc = { version = "0.1.39", optional = true }

[dependencies.nih_plug]
git = "https://github.com/robbert-vdh/nih-plug"
features = ["standalone", "vst3"]

[dependencies.nih_plug_vizia]
git = "https://github.com/robbert-vdh/nih-plug"
optional = true

[dependencies]
audio_sampler_lib = { path = "../audio_sampler_lib" }
atomic_float = "0.1"

parking_lot = "0.12.1"
triple_buffer = "7.0.0"
num-traits = "0.2.17"
