[package]
name = "midi-sampler"
version = "0.1.0"
edition = "2021"

[lib]
name = "midi_sampler"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "midi-sampler"
path = "src/main.rs"

[dependencies.nih_plug]
git = "https://github.com/robbert-vdh/nih-plug"
features = ["standalone", "vst3"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
[dependencies.tikv-jemallocator]
version = "0.5.4"

[dependencies.intmap]
version = "2.0.0"




