[package]
name = "pyo3_plugin"
edition = "2021"

[lib]
name = "pyo3_plugin"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "pyo3_plugin"
path = "src/main.rs"

[dependencies.nih_plug]
git = "https://github.com/robbert-vdh/nih-plug"
features = ["standalone", "vst3"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.4"

[dependencies.intmap]
version = "2.0.0"

[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize"]








