[package]
name = "pyo3_plugin"
edition = "2021"

[lib]
name = "pyo3_plugin"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "pyo3_plugin"
path = "src/main.rs"

[dependencies.nih_plug]
git = "https://github.com/robbert-vdh/nih-plug"
features = ["standalone", "vst3"]

[dependencies.notify]
version = "6.1.1"

[dependencies.crossbeam-channel]
version = "0.5.13"

[dependencies.nih_plug_vizia]
git = "https://github.com/robbert-vdh/nih-plug"

[dependencies.parking_lot]
version = "0.12.3"

[dependencies.triple_buffer]
version = "8.0.0"

[dependencies.pyo3]
version = "0.23.4"
features = ["auto-initialize", "macros"]
